RESOLVED FIXED104116
[Qt][Mac] QWebView disappears when the system tries to hide the scrollbars.
https://bugs.webkit.org/show_bug.cgi?id=104116
Summary [Qt][Mac] QWebView disappears when the system tries to hide the scrollbars.
Zeno Albisser
Reported 2012-12-05 06:33:46 PST
[Qt][Mac] QWebView disappears when the system tries to hide the scrollbars.
Attachments
Patch (2.85 KB, patch)
2012-12-05 06:43 PST, Zeno Albisser
no flags
Zeno Albisser
Comment 1 2012-12-05 06:43:03 PST
Simon Hausmann
Comment 2 2012-12-05 07:00:01 PST
Comment on attachment 177738 [details] Patch Ohh, since the widget pointer in the style option was the webview, the animation of fading out the scrollbar actually operated on the webview? Hehehe LGTM.
Zeno Albisser
Comment 3 2012-12-05 07:32:12 PST
Comment on attachment 177738 [details] Patch Clearing flags on attachment: 177738 Committed r136685: <http://trac.webkit.org/changeset/136685>
Zeno Albisser
Comment 4 2012-12-05 07:32:17 PST
All reviewed patches have been landed. Closing bug.
Eike Ziller
Comment 5 2012-12-11 01:24:07 PST
This is actually not really fixed, e.g. Qt Creator uses a custom style "ManhattenStyle" which is a QProxyStyle to the system style (which on Mac is QMacStyle), so it still happens there.
Pierre Rossi
Comment 6 2012-12-11 03:20:00 PST
(In reply to comment #5) > This is actually not really fixed, e.g. Qt Creator uses a custom style "ManhattenStyle" which is a QProxyStyle to the system style (which on Mac is QMacStyle), so it still happens there. Seems like we would need an equivalent of inherits for style proxying in order for the condition used here to be more thorough.
Zeno Albisser
Comment 7 2012-12-11 03:22:20 PST
(In reply to comment #6) > Seems like we would need an equivalent of inherits for style proxying in order for the condition used here to be more thorough. I think that could be achieved by querying QProxyStyle::baseStyle(), no? But it feels like yet another workaround.
Note You need to log in before you can comment on or make changes to this bug.